# MultiAgent-MarketingENV

./: .dockerignore  .gitignore  Dockerfile  GETTING_STARTED.md  Idea.md  README.md  RESOURCES.md  RULES_JUDGING.md  check_results.py  environment.py  graders.py  inference.py  inference_output.txt  inference_run1.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt  result.txt  tasks.py  temp_test1.txt  temp_test2.txt  temp_test3.txt  temp_test4.txt  temp_test5.txt  temp_test8.txt  temp_test9.txt  test_api.py  test_env.py
agents/: base_agent.py  campaign_scheduler_agent.py  content_reviewer_agent.py  copywriter_agent.py  creative_designer_agent.py  orchestrator.py  publishing_manager_agent.py  social_media_strategist_agent.py
baseline/: run_baseline.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AgentState.tsx  Controls.tsx  MetricsPanel.tsx  Timeline.tsx
env/: environment.py  reward_system.py
frontend/static/: app.js  avatar.js  particles.js  styles.css
frontend/templates/: index.html
graders/: easy_grader.py  hard_grader.py  medium_grader.py
logs/trajectories/: 2026-03-31_trajectories.jsonl
models/: action.py  observation.py  reward.py
server/: app.py
tasks/: task_brand_ad.py  task_campaign_bundle.py  task_easy_post.py  task_product_promo.py  task_scheduled_post.py
tools/: caption_writer.py  hashtag_tool.py  image_generator.py  publisher.py  reviewer.py  scheduler.py
utils/: llm_client.py  trajectory_logger.py
(+4 files in other folders)
